--- a/src/app/pages/ingresosAnuales/ingresos.component.html
+++ b/src/app/pages/ingresosAnuales/ingresos.component.html
@@ -3,8 +3,16 @@
     <div>
         <!--#region :::: FORM DE CAPUTURA :::: -->
         <div class="dx-field">
+            <div class="dx-field-label" style="width: 10%;">Año</div>
+            <div class="dx-field-value" style="width: 20%;"> 
+                <dx-select-box [items]="anios" displayExpr="anio" valueExpr="idAnio" (onValueChanged)="seleccionarAnio($event)">
+                </dx-select-box>
+            </div> 
+  
+            <div class="dx-field-label" style="width: 5%;"></div>
+
             <div class="dx-field-label" style="width: 20%;">Unidad de negocio</div>
-            <div class="dx-field-value" style="width: 80%;">
+            <div class="dx-field-value" style="width: 60%;">
                 <dx-drop-down-box [(value)]="treeBoxValue" [(opened)]="isTreeBoxOpened" valueExpr="ID" displayExpr="name" placeholder="Selecciona un valor..." [showClearButton]="true" [dataSource]="treeDataSource" (onOptionChanged)="onTreeBoxOptionChanged($event)">
                     <div *dxTemplate="let data of 'content'">
                         <dx-tree-view [dataSource]="treeDataSource" dataStructure="plain" keyExpr="ID" parentIdExpr="categoryId" selectionMode="single" displayExpr="name" [selectByClick]="true" (onItemSelectionChanged)="treeView_itemSelectionChanged($event)">
@@ -12,7 +20,7 @@
                     </div>
                 </dx-drop-down-box>
             </div>
-            <div class="dx-field-value" style="width: 25%;">
+            <div class="dx-field-value" style="width: 20%;">
                 <dx-button stylingMode="contained" text="Actualizar" icon="search" type="normal" [width]="240" (onClick)="clickClientesRutas($event)">
                 </dx-button>
             </div>
