--- a/src/app/pages/ciclo-viaje/ciclo-viaje.component.html
+++ b/src/app/pages/ciclo-viaje/ciclo-viaje.component.html
@@ -1,4 +1,4 @@
-<h2 class="content-block">Rentabilidad Contable</h2>
+<h2 class="content-block">Ciclo de Viaje</h2>
 
 <!-- Card principal  -->
 <div class="content-block dx-card responsive-paddings padding-10">
@@ -160,46 +160,64 @@
 
     <dx-data-grid #rentCont2 id="gridContainer2" [dataSource]="arrRentContItems" [showColumnLines]="true" [rowAlternationEnabled]="true" [columnAutoWidth]="true" [allowColumnResizing]="true" [allowColumnReordering]="false" [columnAutoWidth]="true" [showBorders]="true"
         (onRowPrepared)="onRowPrepared($event)" (onContentReady)="onContentReady($event)" (onCellPrepared)="onCellPrepared($event)">
-        <dxi-column dataField="unidadNegocio" caption="Unidad Negocio" [fixed]="true" headerCellTemplate="headerTemplate" [groupIndex]="0"></dxi-column>
-        <dxi-column dataField="tracto" caption="Tracto" [fixed]="true" headerCellTemplate="headerTemplate" [groupIndex]="1"></dxi-column>
-        <dxi-column dataField="operador" caption="Operador" [fixed]="true" headerCellTemplate="headerTemplate" [width]="5"></dxi-column>
-        <dxi-column dataField="noLiquidacion" caption="Liquidación" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="inicio" caption="Inicio" format="dd-MM-yy HH:mm" type="date" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="fin" caption="Fin" [fixed]="true" format="dd-MM-yy HH:mm" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="ingresoTotal" caption="Ingreso Total" [fixed]="true" format="$ #,##0.##;-$ #,##0.##" headerCellTemplate="headerTemplate" cellTemplate="cellTemplateBold"></dxi-column>
+        
+        <dxi-column caption="Viaje Salida" headerCellTemplate="headerTemplate">
+            <dxi-column dataField="" caption="T. Salida Viaje" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
+        </dxi-column>
 
-        <dxi-column dataField="margenUtilida" caption="Margen Utilidad" [fixed]="true" format="$ #,###,###.##;-$ #,##0.##" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="margenUtilidaPor" caption="%" [fixed]="true" format="percent" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="diasViaje" caption="Días Viaje" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="viajes" caption="Viajes" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="kmsCargados" caption="Kms. Cargado" [fixed]="false" format="fixedPoint" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="kmsVacios" caption="Kms. Vacio" [fixed]="false" format="fixedPoint" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="lstDiesel" caption="Lts. Diesel" [fixed]="false" format="fixedPoint" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="rendimiento" caption="Rendimiento" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="combustible" caption="Combustible" [fixed]="false" format="$ #,##0.##;-$ #,##0.##" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="combustiblePor" caption="%" format="percent" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="casetas" caption="Casetas" [fixed]="false" format="$ #,##0.##;-$ #,##0.##" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="casetasPor" caption="%" format="percent" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="sueldosLiquidacion" caption="Sueldos Liquidación" [fixed]="false" format="$ #,##0.##;-$ #,##0.##" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="sueldosLiquidacionPor" caption="%" format="percent" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="otros" caption="Otros" format="$ #,##0.##;-$ #,##0.##" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="otrosPor" caption="%" format="percent" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="costosDirectosViaje" caption="COSTOS DIRECTOS" format="$ #,##0.##;-$ #,##0.##" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="costosDirectosViajePor" caption="%" format="percent" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="sueldoBase" caption="Sueldo Base" format="$ #,##0.##;-$ #,##0.##" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="sueldoBasePor" caption="%" format="percent" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="cargaSocialNomina" caption="Carga Social Nómina" format="$ #,##0.##;-$ #,##0.##" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="cargaSocialNominaPor" caption="%" format="percent" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="fijoMtto" caption="Fijo Mtto." format="$ #,##0.##;-$ #,##0.##" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="fijoMttoPor" caption="%" format="percent" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="varMtto" caption="Var. Mtto" format="$ #,##0.##;-$ #,##0.##" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="varMttoPor" caption="%" format="percent" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="fijoTrans" caption="Fijo Trans." format="$ #,##0.##;-$ #,##0.##" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="fijoTransPor" caption="%" [fixed]="false" format="percent" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="varTrans" caption="Var Trans." format="$ #,##0.##;-$ #,##0.##" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="varTransPor" caption="%" [fixed]="false" format="percent" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="costosAdicionales" caption="COSTOS ADICIONALES" format="$ #,##0.##;-$ #,##0.##" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="costosAdicionalesPor" caption="%" [fixed]="false" format="percent" headerCellTemplate="headerTemplate"></dxi-column>
+                <!-- <dxi-column dataField="fake" [showInColumnChooser]="false" [fixed]="true" fixedPosition="left" [width]="0.01"></dxi-column>  -->
+
+        <dxi-column caption="Viaje Cardo" headerCellTemplate="headerTemplate">
+            <dxi-column dataField="" caption="No. Viaje" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+            <dxi-column dataField="" caption="Llegada Punto Carga" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+            <dxi-column dataField="" caption="Tiempo Registo viaje Cargado" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+            <dxi-column dataField="" caption="llegada a carga" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+            <dxi-column dataField="" caption="Ingreso a carga" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+            <dxi-column dataField="" caption="Espera inicio carga" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+            <dxi-column dataField="" caption="Carga" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+            <dxi-column dataField="" caption="Espera Inicio Viaje" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+            <dxi-column dataField="" caption="Tránsito Destino" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+            <dxi-column dataField="" caption="Espera ingreso descarga" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+            <dxi-column dataField="" caption="Espara inicio descarga" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+            <dxi-column dataField="" caption="Descarga" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+            <dxi-column dataField="" caption="Espera Cierre de Viaje" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+            <dxi-column dataField="" caption="Total" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+            <dxi-column dataField="" caption="Ruta" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+
+        </dxi-column>
+
+        <dxi-column caption="Viaje Siguiente Cargado" headerCellTemplate="headerTemplate">
+            <dxi-column dataField="" caption="No.Viaje" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+            <dxi-column dataField="" caption="Punto Carga" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+            <dxi-column dataField="" caption="Llegada Carga" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+            <dxi-column dataField="" caption="Ingreso Carga" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+            <dxi-column dataField="" caption="Espera" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+            <dxi-column dataField="" caption="Carga" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+            <dxi-column dataField="" caption="Espera Salida" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+            <dxi-column dataField="" caption="Carga Diesel" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+            <dxi-column dataField="" caption="Tránsito Descarga" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+            <dxi-column dataField="" caption="Espera Descarga" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+            <dxi-column dataField="" caption="Descarga" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+            <dxi-column dataField="" caption="Total" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+            <dxi-column dataField="" caption="Ruta" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+        </dxi-column>
+
+        <dxi-column caption="Viaje Retorno" headerCellTemplate="headerTemplate">
+            <dxi-column dataField="" caption="Espera Despacho" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+            <dxi-column dataField="" caption="Retorno Base" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+            <dxi-column dataField="" caption="Total" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+        </dxi-column>
+
+        <dxi-column caption="Viaje Gasolinera" headerCellTemplate="headerTemplate">
+            <dxi-column dataField="" caption="Salida" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+            <dxi-column dataField="" caption="Llegada" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+            <dxi-column dataField="" caption="Retorno" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+            <dxi-column dataField="" caption="Total" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+        </dxi-column> 
+
+        <dxi-column dataField="" caption="Total" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+        <dxi-column dataField="" caption="Detalle" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+
 
         <dxo-group-panel [visible]="false"></dxo-group-panel>
         <dxo-grouping #expand [autoExpandAll]="true"></dxo-grouping>
